fix(registry): stabilize generated metadata runtime
Prefer generated component metadata and invocation/property plans across JVM runtime paths, tighten generated-only fallback behavior, and cache registry lookups to keep the broad sdk-jvm suite fast.

Also fixes generated-only parity regressions for web/API docs, validation metadata, event-sourcing nullable interface apply methods, and nested body parameter paths.

Verified with ./mvnw -q -pl sdk-jvm,annotation-processor-tests -am test.